--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,55 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-/* 
+body{
+    display: flex;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+    background-color: #44c2d8;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.cable{
+background-color: white;
+border: 1px solid  #5da7a6;
+width: 10px;
+height: 50px;
+margin-left: 38px;
+box-shadow: 5px 5px 10px #888888;
+}
 
-*/
+.container{
+    background-color: white;
+    border: 2px solid  #5da7a6;
+    width: 85px;
+    height: 220px;    
+    padding: 10px;
+    border-radius: 15px;
+    box-shadow: 5px 5px 10px #888888;
+
+}
+.lightShape{
+    width: 60px;
+    height: 60px;
+    margin: auto;
+    border-radius: 50%;
+    padding: 10px;
+    margin-bottom: 8px;
+    border: 6px solid  #5da7a6;    
+}
+.red {
+    background-color: red;
+}
+.yellow{
+    background-color: yellow;
+}
+.green{
+    background-color: green;
+}
+.selected {
+    box-shadow:#f8ffcc 0px 0px 30px 20px;
+    transition: width 2s;
+}
+.title {
+    color: white;
+    text-align: center;
+}
