--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,7 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
 
-body{
+body {
     display: flex;
     height: 100vh;
     align-items: center;
@@ -9,7 +9,7 @@ body{
     background-color: #44c2d8;
 }
 
-.cable{
+.cable {
 background-color: white;
 border: 1px solid  #5da7a6;
 width: 10px;
@@ -18,7 +18,36 @@ margin-left: 38px;
 box-shadow: 5px 5px 10px #888888;
 }
 
-.container{
+.post {
+background-color: white;
+border: 1px solid  #5da7a6;
+width: 10px;
+height: 25px;
+margin-left: 38px;
+box-shadow: 5px 5px 10px #888888;
+}
+
+.post2{
+background-color: white;
+border: 1px solid  #5da7a6;
+width: 30px;
+height: 150px;
+margin-left: 29px;
+margin-top: 0px;
+box-shadow: 5px 5px 10px #888888;
+}
+
+.base {
+background-color: white;
+border: 1px solid  #5da7a6;
+width: 70px;
+height: 30px;
+margin-left: 9px;
+border-radius: 15px;
+box-shadow: 5px 5px 10px #888888;
+}
+
+.container {
     background-color: white;
     border: 2px solid  #5da7a6;
     width: 85px;
@@ -26,40 +55,43 @@ box-shadow: 5px 5px 10px #888888;
     padding: 10px;
     border-radius: 15px;
     box-shadow: 5px 5px 10px #888888;
-
 }
-.lightShape{
+.lightShape {
     width: 60px;
     height: 60px;
     margin: auto;
     border-radius: 50%;
     padding: 10px;
     margin-bottom: 8px;
-    border: 6px solid  #5da7a6;    
+    border: 6px solid  #5da7a6;
 }
+
 .red {
-    background-color: red;    
+    background-color: red;      
 }
-.yellow{
-    background-color: yellow;
+
+.yellow {
+    background-color: yellow;    
 }
-.green{
-    background-color: green;
+
+.green {
+    background-color: green;    
 }
+
 .selected {
     box-shadow:#f8ffcc 0px 0px 30px 20px;
     transition: width 2s;
 }
+
 .iconContainer {
     background-color: white;
     border: 2px solid  #5da7a6;
     width: 85px;
     height: 85px; 
-    margin-top: 20px;    
     border-radius: 15px;
-    box-shadow: 5px 5px 10px #888888;
-    font-size: 60px;
+    box-shadow: 5px 0px 10px #888888;
+    margin: auto;  
     color: #5da7a6;
-    text-align: center;    
+    font-size: 60px;
+    text-align: center;      
 }
-
