--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,14 +9,14 @@ body {
     background-color: #44c2d8;
 }
 
-.cable {
-background-color: white;
-border: 1px solid  #5da7a6;
-width: 10px;
-height: 50px;
-margin-left: 38px;
-box-shadow: 5px 5px 10px #888888;
-}
+// .cable {
+// background-color: white;
+// border: 1px solid  #5da7a6;
+// width: 10px;
+// height: 50px;
+// margin-left: 38px;
+// box-shadow: 5px 5px 10px #888888;
+// }
 
 .post {
 background-color: white;
